# apt-vulns-xyz

./: .gitignore  Cargo.toml  README.md  index.html  kpcyrd.pgp
.github/workflows/: build.yml
conf/: distributions  options
pkgs/acme-redirect/: build.toml  repro-env.toml  vendored-openssl.patch
pkgs/authoscope/: build.toml  repro-env.toml  vendored-openssl.patch
pkgs/sh4d0wup/: build.toml  repro-env.toml  vendored-openssl.patch
pkgs/sn0int/: build.toml  repro-env.toml
pkgs/sniffglue/: build.toml  repro-env.toml
pkgs/spytrap-adb/: build.toml  repro-env.toml
src/: main.rs
