[package]
name = "apt-vulns-xyz"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.7"
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
fd-lock = "4.0.2"
hex = "0.4.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
tar = "0.4.41"
toml = "0.8.14"
